--- a/style.css
+++ b/style.css
@@ -27,5 +27,25 @@ div {
 	float: left;
 	text-align: center;
 	cursor: pointer;
+	background: yellow;
 	
+	
+}
+
+.disabled {
+	
+	cursor: default;
+	border-color: gray;
+	color: gray;
+	
+	
+
+}
+
+.image-holder {
+	width: 300px;
+	height: 215px;		
+	float: left;
+
+
 }
